--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,6 +1,13 @@
 <h1>Chat</h1>
 <hr>
 <div class="app-mensajes" id="app-mensajes">
+    <div class="text-right" *ngFor="let c of chatService.chats">
+        <span class="badge badge-primary">{{c.nombre}}</span>
+        <p>
+            {{ c.mensaje }}
+        </p>
+    </div>
+    <!--
     <div class="text-right">
         <span class="badge badge-primary">Fernando</span>
         <p>
@@ -13,5 +20,6 @@
             Este es un mensaje de chat
         </p>
     </div>
+    -->
 </div>
 <input class="form-control" type="text" name="mensaje" [(ngModel)]="mensaje" (keyup.enter)="enviar_mensaje()" placeholder="Enviar mensaje">
