--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="container main-container">
     <h1>Firechat</h1>
-    <app-login></app-login>
+    <div class="col-md-12 text-right" *ngIf="chatService.usuario.uid">
+        <button class="btn btn-outline-danger" type="button" (click)="chatService.logout()">
+            Salir
+        </button>
+    </div>
+    <app-login *ngIf="!chatService.usuario.uid"></app-login>
     <!--
     <div class="chat-window">
         <app-chat></app-chat>
